--- a/css/common.css
+++ b/css/common.css
@@ -161,7 +161,7 @@ button {
       width: 100%; }
     .filter-wrapper .filter-nav-btn.active {
       font-weight: 500;
-      color: #2E4276; }
+      color: #2966FF; }
 
 @media (max-width: 1679px) {
   .filter-wrapper .filter-nav-btn {
