--- a/scss/common.scss
+++ b/scss/common.scss
@@ -181,7 +181,7 @@ button{
         }
         &.active{
             font-weight: 500;
-            color: $primary-dark;
+            color: $primary-blue;
         }
     }
 }
