--- a/scss/home.scss
+++ b/scss/home.scss
@@ -57,7 +57,7 @@
         margin-bottom: 20px;
     }
     .h-card-block{
-        padding: 25px 40px 50px;
+        padding: 25px 40px;
         height: 100%;
         background-color: $primary-light;
         display: flex;
