--- a/css/header.css
+++ b/css/header.css
@@ -186,7 +186,7 @@
       .header-wrapper .right-block .my-acc-dropdown .my-acc-btn {
         width: 185px;
         max-height: 40px;
-        padding: 7px 18px 7px 13px;
+        padding: 9px 18px 9px 13px;
         border-radius: 20px;
         background: #E8EFFF;
         border: none;
@@ -228,15 +228,14 @@
       .header-wrapper .right-block .buy-pros-dropdown .buy-pros-btn {
         width: 160px;
         max-height: 40px;
-        padding: 7px 18px 7px 13px;
+        padding: 9px 18px 9px 13px;
         border-radius: 20px;
-        background: #fff;
-        border: none;
+        border: solid 1px #2966FF;
+        color: #fff;
+        background: #2966FF;
         display: flex;
         align-items: center;
         font-size: 14px;
-        color: #4D6090;
-        border: solid 1px #4D6090;
         margin-left: 10px; }
         @media (max-width: 579px) {
           .header-wrapper .right-block .buy-pros-dropdown .buy-pros-btn {
@@ -312,9 +311,10 @@
       background-color: #F0F0F8; }
   .header-wrapper .wallet-btn {
     border-radius: 20px;
-    color: #fff;
-    background: #2966FF;
-    padding: 8px 30px;
+    background-color: #fff;
+    color: #4D6090;
+    border: solid 1px #4D6090;
+    padding: 9px 30px;
     font-size: 0.875rem;
     transition: .3s;
     white-space: nowrap;
@@ -421,7 +421,7 @@
 
   .header-wrapper .wallet-btn, .header-wrapper .login-btn, .header-wrapper .right-block .buy-btn {
     font-size: 0.813rem;
-    padding: 8px 20px; }
+    padding: 9px 20px; }
 
   .header-wrapper .prof-avt img {
     width: 36px;
