--- a/css/home.css
+++ b/css/home.css
@@ -52,7 +52,7 @@
   .card-sec .h-card-col {
     margin-bottom: 20px; }
   .card-sec .h-card-block {
-    padding: 25px 40px 50px;
+    padding: 25px 40px;
     height: 100%;
     background-color: #fff;
     display: flex;
