--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -33,6 +33,18 @@
       display: flex; }
       .portfolio-sec .lg-graph .graph-title-block .graph-title .g-logo {
         margin-right: 15px; }
+        .portfolio-sec .lg-graph .graph-title-block .graph-title .g-logo .g-logo-block {
+          display: inline-flex;
+          align-items: center;
+          justify-content: center;
+          width: 44px;
+          height: 44px;
+          border-radius: 50%;
+          background-color: #2E4276;
+          line-height: 0; }
+          .portfolio-sec .lg-graph .graph-title-block .graph-title .g-logo .g-logo-block img {
+            margin-top: -2px;
+            width: 18px; }
         @media (max-width: 1679px) {
           .portfolio-sec .lg-graph .graph-title-block .graph-title .g-logo img {
             height: 40px; } }
@@ -49,6 +61,10 @@
           color: #2966FF;
           margin-left: 15px;
           font-weight: 500; }
+          .portfolio-sec .lg-graph .graph-title-block .graph-title .graph-det .g-rate span.incs {
+            color: #FC5252; }
+          .portfolio-sec .lg-graph .graph-title-block .graph-title .graph-det .g-rate span.decs {
+            color: #0DAD4D; }
     .portfolio-sec .lg-graph .graph-title-block .g-filter-block {
       padding: 8px 0; }
       .portfolio-sec .lg-graph .graph-title-block .g-filter-block .filter-btn-cover {
@@ -522,6 +538,9 @@
 
   .portfolio-sec .lg-graph .graph-title-block {
     margin-bottom: 15px; } }
+@media (max-width: 991px) {
+  .portfolio-sec .portfolio-card .card-table {
+    min-width: max-content; } }
 @media (max-width: 579px) {
   .portfolio-sec .lg-graph .graph-title-block {
     flex-wrap: wrap; }
