--- a/scss/header.scss
+++ b/scss/header.scss
@@ -207,7 +207,7 @@
             .my-acc-btn{
                 width: 185px;
                 max-height: 40px;
-                padding: 7px 18px 7px 13px;
+                padding: 9px 18px 9px 13px;
                 border-radius: 20px;
                 background: #E8EFFF;
                 border: none;
@@ -259,15 +259,16 @@
             .buy-pros-btn{
                 width: 160px;
                 max-height: 40px;
-                padding: 7px 18px 7px 13px;
+                padding: 9px 18px 9px 13px;
                 border-radius: 20px;
-                background: $primary-light;
-                border: none;
+                // background: $primary-light;
+                // color: $input-text-color;
+                border: solid 1px $primary-blue;
+                color: $primary-light;
+                background: $primary-blue;
                 display: flex;
                 align-items: center;
                 font-size: 14px;
-                color: $input-text-color;
-                border: solid 1px $input-text-color;
                 margin-left: 10px;
                 @media($sm-579){
                     margin-left: 0;
@@ -362,9 +363,12 @@
     }
     .wallet-btn{
         border-radius: 20px;
-        color: $primary-light;
-        background: $primary-blue;
-        padding: 8px 30px;
+        // color: $primary-light;
+        // background: $primary-blue;
+        background-color: #fff;
+        color: #4D6090;
+        border: solid 1px #4D6090;
+        padding: 9px 30px;
         font-size: 0.875rem;
         transition: .3s;
         white-space: nowrap;
@@ -488,7 +492,7 @@
     }
     .header-wrapper .wallet-btn, .header-wrapper .login-btn, .header-wrapper .right-block .buy-btn{
         font-size: 0.813rem;
-        padding: 8px 20px;
+        padding: 9px 20px;
     }
     .header-wrapper .prof-avt img {
         width: 36px;
