--- a/css/header.css
+++ b/css/header.css
@@ -235,13 +235,10 @@
         background: #2966FF;
         display: flex;
         align-items: center;
-        font-size: 14px;
-        margin-left: 10px; }
-        @media (max-width: 579px) {
-          .header-wrapper .right-block .buy-pros-dropdown .buy-pros-btn {
-            margin-left: 0; } }
+        font-size: 14px; }
         .header-wrapper .right-block .buy-pros-dropdown .buy-pros-btn .cart-mob {
-          display: none; }
+          display: none;
+          filter: brightness(0) saturate(100%) invert(100%) sepia(21%) saturate(1%) hue-rotate(50deg) brightness(107%) contrast(101%); }
           @media (max-width: 1199px) {
             .header-wrapper .right-block .buy-pros-dropdown .buy-pros-btn .cart-mob {
               display: block; } }
@@ -287,19 +284,53 @@
             margin-right: 10px;
             width: 22px; }
             .header-wrapper .right-block .buy-pros-dropdown .dropdown-menu .dropdown-item .icon img {
-              max-width: 100%; }
+              max-width: 100%;
+              border-radius: 50%; }
           .header-wrapper .right-block .buy-pros-dropdown .dropdown-menu .dropdown-item:hover {
             background: #F0F1F9; }
+          .header-wrapper .right-block .buy-pros-dropdown .dropdown-menu .dropdown-item.item-disbaled {
+            opacity: .5;
+            cursor: not-allowed; }
   .header-wrapper .info-block {
     color: #4D6090;
-    margin-right: 40px; }
+    margin-right: 40px;
+    display: flex;
+    align-items: center; }
     .header-wrapper .info-block .info-label {
-      font-weight: 600; }
+      font-weight: 600;
+      margin-left: 10px; }
     .header-wrapper .info-block .info-val {
       margin-left: 10px;
       font-weight: 500; }
     .header-wrapper .info-block .info-val-end {
       margin-left: 40px; }
+    .header-wrapper .info-block .pros-val {
+      color: #0DAD4D;
+      align-items: center;
+      display: inline-flex; }
+      .header-wrapper .info-block .pros-val img {
+        margin-right: 3px;
+        transform-origin: center;
+        margin-top: -1px; }
+      .header-wrapper .info-block .pros-val.pros-val-up img {
+        margin-top: -2px;
+        transform: rotate(180deg); }
+      .header-wrapper .info-block .pros-val.pros-val-down {
+        color: #FC5252; }
+        .header-wrapper .info-block .pros-val.pros-val-down img {
+          filter: brightness(0) saturate(100%) invert(60%) sepia(59%) saturate(6568%) hue-rotate(331deg) brightness(125%) contrast(147%); }
+  .header-wrapper .theme-toggle-btn-block {
+    display: inline-flex;
+    margin-right: 25px; }
+    .header-wrapper .theme-toggle-btn-block .theme-toggle-btn {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      box-shadow: none;
+      border: none;
+      width: 30px;
+      height: 30px;
+      background-color: transparent; }
   .header-wrapper .wallet-btn-cover {
     position: relative; }
     .header-wrapper .wallet-btn-cover .wallet-btn-copy {
@@ -596,8 +627,8 @@
     margin-left: 20px; } }
 @media (max-width: 767px) {
   .header-wrapper .header-btn-web, .header-wrapper .login-btn, .wallet-btn-cover-web {
-    display: none; } }
-@media (max-width: 579px) {
+    display: none; }
+
   .header-wrapper .right-block .buy-pros-block {
     padding-right: 0;
     padding-left: 0; }
@@ -616,7 +647,7 @@
     position: relative; }
     .header-wrapper .admin-h-btn-block {
       position: absolute;
-      top: -50px;
+      top: -47px;
       right: 0;
       z-index: 1; }
     .header-wrapper.header-offline {
@@ -646,7 +677,16 @@
       background-color: #ECECEC; }
 
   .header-wrapper .info-block {
-    padding-top: 4px; } }
+    padding-top: 4px; }
+
+  .header-wrapper .theme-toggle-btn-block {
+    position: absolute;
+    top: -47px;
+    right: 95px;
+    height: 36px;
+    margin-right: 0; }
+    .header-wrapper .theme-toggle-btn-block .theme-toggle-btn {
+      height: 36px; } }
 @media (max-width: 360px) {
   .header-wrapper.header-offline {
     padding: 15px 10px; }
