--- a/css/home.css
+++ b/css/home.css
@@ -11,8 +11,7 @@
 /* placeholder mixin */
 .welcome-cover {
   border-radius: 12px;
-  border: 1px solid #292D32;
-  background: #292D32;
+  background: #fff;
   padding: 20px 55px 30px;
   align-items: center; }
   .welcome-cover .content-block {
@@ -22,10 +21,13 @@
       margin-right: 30px; }
       .welcome-cover .content-block .img-block img {
         max-width: 145px; }
+      .welcome-cover .content-block .img-block .wlcm-dark {
+        display: none; }
     .welcome-cover .content-block .text-block {
       color: #fff;
       padding-top: 15px; }
       .welcome-cover .content-block .text-block h4 {
+        color: #486191;
         font-size: 1.438rem;
         font-weight: 400; }
         .welcome-cover .content-block .text-block h4 span {
@@ -33,7 +35,7 @@
       .welcome-cover .content-block .text-block p {
         font-size: 0.813rem;
         font-weight: 500;
-        color: #909AA6;
+        color: #8B93A3;
         margin-bottom: 0; }
   .welcome-cover .btn-block {
     flex: 0 0 auto; }
