--- a/scss/side-nav.scss
+++ b/scss/side-nav.scss
@@ -1,7 +1,7 @@
 @import "partials/partials";
 .nav-block{
     width: 300px;
-    background: $nav-dark;
+    background: $primary-light;
     box-shadow: 0px 4px 112px 0px rgba(0, 0, 0, 0.08);
     border-radius: 0 16px 0 0;
     transition: .3s;
@@ -22,6 +22,9 @@
             padding: 10px 0;
             display: flex;
             align-items: center;
+            img{
+                filter: brightness(0) saturate(100%) invert(36%) sepia(37%) saturate(616%) hue-rotate(185deg) brightness(92%) contrast(88%);
+            }
             .logo-txt{
                 padding-left: 5px;
             }
@@ -41,7 +44,7 @@
             padding: 2px;
             border-radius: 50%;
             border: none;
-            background: #393F47;
+            background: #EFF6FF;
             .line-cover{
                 display: inline-flex;
                 flex-direction: column;
@@ -53,7 +56,7 @@
             .nav-line{
                 display: inline-flex;
                 width: 12px;
-                background-color: $primary-light;
+                background-color: #486191;
                 height: 2px;
                 border-radius: 10px;
                 transition: .3s;
@@ -77,7 +80,7 @@
         flex: 1 1 auto;
         display: flex;
         flex-direction: column;
-        background-color: $nav-dark;
+        background-color: $primary-light;
         .navbar-ul{
             list-style: none;
             padding: 0 10px;
@@ -97,6 +100,9 @@
                     transition: .3s;
                     z-index: 1;
                     white-space: nowrap;
+                    img{
+                        filter: brightness(0) saturate(100%) invert(36%) sepia(37%) saturate(616%) hue-rotate(185deg) brightness(92%) contrast(88%);
+                    }
                     &::after{
                         z-index: -2;
                         content: '';
@@ -106,7 +112,7 @@
                         height: 100%;
                         top: 0;
                         transition: .3s ease-out;
-                        background: #393F47;
+                        background: #EFF6FF;
                         border-radius: 20px;
                     }
                     .form-switch{
@@ -121,6 +127,7 @@
                     .nav-label{
                         display: inline-block;
                         padding-left: 20px;
+                        color: #4D6090;
                     }
                     .nav-icon{
                         display: inline-block;
@@ -128,6 +135,12 @@
                         line-height: 0;
                     }
                     &:hover, &.active{
+                        img{
+                            filter: brightness(0) saturate(100%) invert(35%) sepia(76%) saturate(4616%) hue-rotate(218deg) brightness(101%) contrast(103%);
+                        }
+                        .nav-label{
+                            color: $primary-blue;
+                        }
                         &::after{
                             width: 100%;
                         }
@@ -209,12 +222,16 @@
             margin-bottom: 15px;
             a{
                 display: inline-block;
+                img{
+                    filter: brightness(0) saturate(100%) invert(36%) sepia(37%) saturate(616%) hue-rotate(185deg) brightness(92%) contrast(88%);
+                }
             }
         }
         .welcome-msg{
             margin-bottom: 20px;
             font-size: 16px;
             color: $primary-light;
+            color: #486191;
             span{
                 text-transform: capitalize;
                 font-weight: 600;
@@ -226,6 +243,9 @@
                 min-width: 20px;
                 margin-right: 20px;
                 transition: .3s;
+                img{
+                    filter: brightness(0) saturate(100%) invert(36%) sepia(37%) saturate(616%) hue-rotate(185deg) brightness(92%) contrast(88%);
+                }
                 &:last-child{
                     margin-right: 0;
                 }
@@ -286,7 +306,7 @@
     }
     .body-wrapper .nav-block .nav-logo-wrapper{
         width: 100%;
-        background-color: $nav-dark;
+        background-color: $primary-light;
         position: fixed;
         top: 0;
         left: 0;
