--- a/css/dark-theme.css
+++ b/css/dark-theme.css
@@ -577,5 +577,12 @@
   .theme-dark .nav-block .nav-logo-wrapper .nav-logo img, .theme-dark .nav-block .nav-footer-block .nav-footer-logo a img,
   .theme-dark .nav-block .nav-footer-block .nav-soc-block .nav-soc img, .theme-dark .nav-block .navbar-collapse-block .navbar-ul .nav-item .nav-link img {
     filter: none; }
+  .theme-dark input:-webkit-autofill,
+  .theme-dark input:-webkit-autofill:focus,
+  .theme-dark textarea:-webkit-autofill,
+  .theme-dark textarea:-webkit-autofill:focus {
+    -webkit-text-fill-color: #fff; }
+  .theme-dark .custom-modal.crate-stake-modal .inp-block-modal .custom-inp:-webkit-autofill {
+    -webkit-text-fill-color: #fff; }
 
 /*# sourceMappingURL=dark-theme.css.map */
